tests/typing/bad/testfile-bang3-1.scala
class A { def m() { var b: Int = ! true } }
object Main { def main(args: Array[String]) { } }
